--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Realtime chat app with rooms",
   "main": "app.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app",
     "dev": "nodemon app"
   },
@@ -13,5 +14,8 @@
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "socket.io": "^4.3.1"
+  },
+  "engines": {
+    "node": "12.19.0"
   }
 }
