--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app",
+    "start": "node app"
   },
   "author": "Mahdi Ahmed",
   "license": "MIT",
@@ -21,5 +21,5 @@
     "node",
     "heroku",
     "express"
-  ],
+  ]
 }
