--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Realtime chat app with rooms",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "node app",
+    "dev": "nodemon app"
   },
   "author": "Mahdi Ahmed",
   "license": "MIT",
